--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme 
-title: [BLOG]
-description: [hello world]
+title: [demo page]
